[gd_scene load_steps=13 format=3 uid="uid://dd46owd33flcd"]

[ext_resource type="PackedScene" uid="uid://c7hba61yvpilc" path="res://scenes/misc/ui elements/menu_button.tscn" id="1_d71xf"]
[ext_resource type="Script" path="res://scenes/menus/settings_menu.gd" id="1_lt7mw"]
[ext_resource type="PackedScene" uid="uid://b5ae7asa3t6gw" path="res://scenes/menus/keybind_input_button.tscn" id="2_43k3j"]
[ext_resource type="Texture2D" uid="uid://c6lbh1yyl5bkv" path="res://textures/menu/menu_bkg.png" id="2_cqvrh"]
[ext_resource type="PackedScene" uid="uid://ciefwagqpg8x6" path="res://scenes/menus/volume_slider.tscn" id="2_gmft5"]
[ext_resource type="Texture2D" uid="uid://0wxslqtmao3e" path="res://textures/menu/menu_button.png" id="4_8ucuo"]
[ext_resource type="AudioStream" uid="uid://trlrbhagbe3s" path="res://music/a-2-3-groovy-bgm.ogg" id="5_qj6si"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rrk2q"]
bg_color = Color(0.756863, 0.756863, 0.756863, 0)

[sub_resource type="SystemFont" id="SystemFont_m2dfh"]
font_names = PackedStringArray("Impact")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_maht3"]
bg_color = Color(0, 0, 0, 0.239216)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_82rme"]
bg_color = Color(0, 0, 0, 0.239216)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_teatr"]
content_margin_left = 16.0
content_margin_top = 8.0
content_margin_right = 16.0
content_margin_bottom = 8.0
texture = ExtResource("4_8ucuo")

[node name="SettingsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lt7mw")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("2_cqvrh")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_rrk2q")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_constants/outline_size = 12
theme_override_fonts/font = SubResource("SystemFont_m2dfh")
theme_override_font_sizes/font_size = 16
text = "Settings"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PanelContainer" type="PanelContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_maht3")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 4

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = -2

[node name="MasterAudioLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_font_sizes/font_size = 6
text = "Master Audio
"

[node name="MasterAudioSlider" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer" instance=ExtResource("2_gmft5")]
layout_mode = 2
step = 0.01
busName = "Master"
defaultValue = 0.25

[node name="MusicAudioLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_font_sizes/font_size = 6
text = "Music"

[node name="MusicAudio" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer" instance=ExtResource("2_gmft5")]
layout_mode = 2
step = 0.01
busName = "Music"
defaultValue = 0.25

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_82rme")

[node name="ActionList" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 4

[node name="KeybindInputButton" parent="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/ActionList" instance=ExtResource("2_43k3j")]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 8
alignment = 1

[node name="ExitButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 6
theme_override_styles/normal = SubResource("StyleBoxTexture_teatr")
theme_override_styles/hover = SubResource("StyleBoxTexture_teatr")
theme_override_styles/pressed = SubResource("StyleBoxTexture_teatr")
theme_override_styles/focus = SubResource("StyleBoxTexture_teatr")
text = "Exit"

[node name="SaveButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 6
theme_override_styles/normal = SubResource("StyleBoxTexture_teatr")
theme_override_styles/hover = SubResource("StyleBoxTexture_teatr")
theme_override_styles/pressed = SubResource("StyleBoxTexture_teatr")
theme_override_styles/focus = SubResource("StyleBoxTexture_teatr")
text = "Save"

[node name="ResetButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 6
theme_override_styles/normal = SubResource("StyleBoxTexture_teatr")
theme_override_styles/hover = SubResource("StyleBoxTexture_teatr")
theme_override_styles/pressed = SubResource("StyleBoxTexture_teatr")
theme_override_styles/focus = SubResource("StyleBoxTexture_teatr")
text = "Reset"

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_qj6si")
bus = &"Music"

[node name="BackButton" parent="." instance=ExtResource("1_d71xf")]
layout_mode = 0
offset_left = 16.0
offset_top = 11.0
offset_right = 46.0
offset_bottom = 22.0
text = "Back
"
referencePath = "res://scenes/menus/main_menu.tscn"

[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/ActionList/KeybindInputButton" to="." method="_on_keybind_input_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/SaveButton" to="." method="_on_save_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/ResetButton" to="." method="_on_reset_button_pressed"]
